fix error404 overflow

--- a/src/components/error404/Error404.module.css
+++ b/src/components/error404/Error404.module.css
@@ -5,6 +5,7 @@
 
   width: 100%;
   height: 100vh;
+  overflow: auto;
   padding-bottom: 100px;
 }
 .block {
@@ -42,7 +43,8 @@
 
   background: #000000;
   border-radius: 30px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25),
+    inset 0 1px 0 rgba(255, 255, 255, 0.3);
 }
 
 @media (max-width: 767px) {
